<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Source -->
    <string name="key_last_processed_glunovo_timestamp" translatable="false">last_processed_glunovo_timestamp</string>
    <string name="key_last_processed_intelligo_timestamp" translatable="false">last_processed_intelligo_timestamp</string>

    <string name="ns_client_bg">NSClient BG</string>
    <string name="ns_client_bg_short">NS BG</string>
    <string name="description_source_ns_client">Downloads BG data from Nightscout</string>
    <string name="source_xdrip">xDrip+ BG</string>
    <string name="description_source_xdrip">Receive BG values from xDrip+.</string>
    <string name="dexcom_app_patched">BYODA</string>
    <string name="dexcom_short">BYODA</string>
    <string name="description_source_dexcom">Receive BG values from the \'Build Your Own Dexcom App\'.</string>
    <string name="eversense">Eversense App (patched)</string>
    <string name="eversense_shortname" translatable="false">EVR</string>
    <string name="description_source_eversense">Receive BG values from the patched Eversense app.</string>
    <string name="glimp">Glimp</string>
    <string name="description_source_glimp">Receive BG values from Glimp.</string>
    <string name="mm640g">MM640g</string>
    <string name="description_source_mm640g">Receive BG values from the 600SeriesAndroidUploader.</string>
    <string name="poctech">Poctech</string>
    <string name="description_source_poctech">Receive BG values from Poctech app</string>
    <string name="glunovo">Glunovo</string>
    <string name="description_source_glunovo">Receive values from Glunovo app</string>
    <string name="intelligo">Intelligo</string>
    <string name="description_source_intelligo">Receive values from Intelligo app</string>
    <string name="tomato">Tomato (MiaoMiao)</string>
    <string name="tomato_short">Tomato</string>
    <string name="description_source_tomato">Receive BG values from Tomato app (MiaoMiao device)</string>
    <string name="aidex">GlucoRx Aidex</string>
    <string name="aidex_short">Aidex</string>
    <string name="description_source_aidex">Receive BG values from GlucoRx Aidex CGMS.</string>
    <string name="random_bg">Random BG</string>
    <string name="description_source_random_bg">Generate random BG data (Demo mode only)</string>
    <string name="random_bg_short">BG</string>

    <string name="do_xdrip_upload_title">Send BG data to xDrip+</string>
    <string name="do_xdrip_upload_summary">In xDrip+ select 640g/Eversense data source</string>
    <string name="bgsource_upload">BG upload settings</string>
    <string name="dexcom_log_ns_sensor_change_title">Log sensor change to NS</string>
    <string name="dexcom_log_ns_sensor_change_summary">Create event \"Sensor Change\" in NS automatically on sensor start</string>
    <string name="direction">direction</string>

    <!-- BluetoothCGMS -->
    <string name="key_bluetooth_cgms_settings" translatable="false">bluetooth_cgms_settings</string>
    <string name="key_bluetooth_cgms_name" translatable="false">bluetooth_cgms_name</string>
    <string name="key_bluetooth_cgms_address" translatable="false">bluetooth_cgms_address</string>
    <string name="key_bluetooth_cgms_starttime" translatable="false">bluetooth_cgms_starttime</string>
    <string name="start_sensor">Start sensor</string>
    <string name="stop_sensor">Stop sensor</string>
    <string name="bluetooth_cgms_pairing">Pairing</string>
    <string name="selected_sensor">Selected sensor</string>
    <string name="bluetooth_cgms">Bluetooth CGMS</string>
    <string name="bluetooth_cgms_short">BT CGMS</string>
    <string name="description_bluetooth_cgms">Receive BG values from Bluetooth CGMS Profile capable devices.</string>
    <string name="ble_status_label">BLE Status</string>
    <string name="sensor_status_label">Sensor Status</string>
    <string name="last_reading_label">Last Reading</string>

</resources>