<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BluetoothCGMSFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttons"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="2dp"
                    android:paddingBottom="5dp">

                    <!-- BLE Status -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:gravity="end"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="@string/ble_status_label"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center_horizontal"
                            android:paddingStart="2dp"
                            android:paddingEnd="2dp"
                            android:text=":"
                            android:textSize="14sp" />

                        <com.joanzapata.iconify.widget.IconTextView
                            android:id="@+id/ble_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!-- CGM Status -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:gravity="end"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="@string/sensor_status_label"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center_horizontal"
                            android:paddingStart="2dp"
                            android:paddingEnd="2dp"
                            android:text=":"
                            android:textSize="14sp" />

                        <com.joanzapata.iconify.widget.IconTextView
                            android:id="@+id/sensor_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!-- Last Reading -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:gravity="end"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="@string/last_reading_label"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center_horizontal"
                            android:paddingStart="2dp"
                            android:paddingEnd="2dp"
                            android:text=":"
                            android:textSize="14sp" />

                        <com.joanzapata.iconify.widget.IconTextView
                            android:id="@+id/last_reading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/dividerHorizontal" />

            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <app.aaps.core.ui.elements.SingleClickButton
                android:id="@+id/start_sensor"
                style="@style/ButtonSmallFontStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="-2dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_start"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/start_sensor"
                app:iconPadding="-4dp" />

            <app.aaps.core.ui.elements.SingleClickButton
                android:id="@+id/stop_sensor"
                style="@style/ButtonSmallFontStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="-2dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_stop"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/stop_sensor"
                app:iconPadding="-4dp" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
